<resources>
    <string name="app_name">Sticket</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_information">Information</string>
    <string name="action_about">About</string>


    <string name="nav_tickets">Tickets</string>
    <string name="nav_signin">Sign in</string>
    <string name="nav_signup">Sign up</string>
    <string name="nav_signout">Log out</string>
    <string name="nav_events">Events</string>

    <!--Dùng cho Activity SignUp-->
    <string name="repassword">Repasword</string>
    <string name="title_activity_event_detail">Chi tiết sự kiện</string>
    <string name="title_activity_add_event">Thêm sự kiện mới</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_addevent">Add event</string>
    <string name="title_activity_events">Events</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="id_phone_number">ID (Số điện thoại)</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng kí</string>
    <string name="no_account_yet_create_one">Chưa có tài khoản? Đăng kí tài khoản</string>
    <string name="password">Mật khẩu</string>

    <string name="already_a_member_login">Bạn đã có tài khoản? Đăng nhập ngay</string>
    <string name="email">Email</string>
    <string name="mobile_number">ID (Số điện thoại)</string>
    <string name="name">Họ tên</string>
    <string name="re_enter_password">Xác nhận mật khẩu</string>

    <string name="title_activity_tickets">TicketsActivity</string>
    <string name="title_activity_ticket_detail">TicketDetailActivity</string>
</resources>
