<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_tickets" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_signin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_signin" />
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_signup" />
        <item
            android:id="@+id/nav_addevent"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_addevent" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
